fixes grid spacing

--- a/css/projects.css
+++ b/css/projects.css
@@ -6,7 +6,7 @@ html, body, .container {
 body {
   font-family: Garamond;
   font-size: 14px;
-  line-height: 1;
+  line-height: 1.5;
   background-color: #17202A;
   display: flex;
   flex-direction: column;
@@ -76,6 +76,7 @@ header .highlight, header .current a {
 header a:hover {
   color: #D7BDE2;
   font-weight: bold;
+  font-style: oblique;
 }
 
 /* start project page */
@@ -94,7 +95,6 @@ header a:hover {
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.4);
   border-radius: .35rem;
   min-height: 380px;
-
 }
 
 
